--- a/style.css
+++ b/style.css
@@ -32,3 +32,39 @@ header {
 .navigation a:hover{
     color: wheat;
 }
+section {
+    padding: 200px 600px;
+}
+.main {
+    width: 100%;
+    min-height: 80vh;
+    display: flex;
+    align-items: center;    
+    background: url(images/background.jpeg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+.main h2 {
+    color:yellow;
+    font-size: 1.6em;
+    font-weight: bolder;
+    font-style: italic;    
+}
+.main h2 span {
+    display: inline-block;    
+    margin-top: 13px;
+    color:aqua;
+    font-size: 0.9em;
+    font-weight: bolder;    
+}
+.main h3 {
+    color: red;
+    font-size: 1.2em;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    margin-left:1%;
+    margin-right:1%;
+}
