--- a/style.css
+++ b/style.css
@@ -68,3 +68,28 @@ section {
     margin-left:1%;
     margin-right:1%;
 }
+.main-btn {
+    color: #fff;
+    background-color: #3a6cf4;
+    text-decoration: wavy;
+    font-size: 1.6em;
+    font-weight: bolder;
+    display: inline-block;
+    padding: 0.7375em 1.0em;
+    letter-spacing: 1px;
+    margin-left: 19%;
+    border-radius: 20px;
+    margin-bottom: 50px;
+    transition: 0.9s ease;   
+}
+.main-btn:hover {
+    background-color: #0a49f6;
+    transform: scale(1.3);
+}
+.social-icons a {
+    color: greenyellow;
+    font-size: 1.1em;
+    font-weight: bolder;
+    font-stretch: ultra-expanded;
+    padding-right: 13px;
+}
