--- a/style.css
+++ b/style.css
@@ -93,3 +93,52 @@ section {
     font-stretch: ultra-expanded;
     padding-right: 13px;
 }
+.title {
+    display: flex;
+    justify-content: center;
+    color: goldenrod;
+    font-size: 3em;
+    font-weight: bolder;
+    margin-bottom: 10px;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.card {
+    background-color: #fff;
+    width: 21.25em;
+    box-shadow: 0 5px 25px rgba(1 1 1 / 10%);
+    border-radius: 80px;
+    padding: 50px;
+    margin: 100px;
+    transition: 0.7s ease;
+}
+
+.card:hover {
+    transform: scale(1.1);
+}
+
+.card .icon {
+    color: rebeccapurple;
+    font-size: 6em;
+    text-align: center;
+}
+
+.info {
+    text-align: center;
+}
+
+.info h3{
+    color: brown;
+    font-size: 1.3em;
+   font-weight: bolder;
+    margin: 20px;
+}
+
+.projects {
+    background-color: #000016;
+}
