--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ header {
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding:20px 40px ;
+    padding:20px 30px ;
 }
 .logo{    
     color:black; 
     font-weight:bold;       
-    font-size:1.5em;
+    font-size:1.9em;
 }
 .navigation a{
     color:black;
@@ -27,13 +27,13 @@ header {
     font-size:0.9em;
     font-style:oblique;
     font-weight:bolder;        
-    padding-left:40px;
+    padding-left:30px;
 }
 .navigation a:hover{
     color: wheat;
 }
 section {
-    padding: 200px 600px;
+    padding: 150px 200px;
 }
 .main {
     width: 100%;
@@ -72,7 +72,7 @@ section {
     color: #fff;
     background-color: #3a6cf4;
     text-decoration: wavy;
-    font-size: 1.6em;
+    font-size: 1.5em;
     font-weight: bolder;
     display: inline-block;
     padding: 0.7375em 1.0em;
@@ -88,7 +88,7 @@ section {
 }
 .social-icons a {
     color: greenyellow;
-    font-size: 1.1em;
+    font-size: 1.5em;
     font-weight: bolder;
     font-stretch: ultra-expanded;
     padding-right: 13px;
@@ -131,14 +131,85 @@ section {
 .info {
     text-align: center;
 }
-
-.info h3{
-    color: brown;
-    font-size: 1.3em;
-   font-weight: bolder;
-    margin: 20px;
-}
-
 .projects {
     background-color: #000016;
+}
+
+.projects .content{
+    margin-top: 30px;
+}
+
+.project-card {
+    background-color: #fff;
+    border: 10px solid #fff;
+    min-height: 10em;
+    width: 50em;
+    overflow: hidden;
+    border-radius: 10px;
+    margin: 15px;
+    transition: 0.7s ease;
+}
+
+.project-card:hover {
+   transform: scale(1.1);
+}
+
+.project-card:hover .project-image {
+    opacity: 0.9;
+ }
+
+.project-image img{
+    width: 100%
+}
+
+.project-info {
+    padding: 1em;
+}
+
+.project-category {
+    font-size: 0.8em;
+    color: #000;
+}
+
+.project-title {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    font-weight: 800;
+    margin-top: 10px;
+}
+
+.more-details {
+    text-decoration: none;
+    color: #3a6cf4;
+}
+
+.more-details:hover {
+    color: powderblue;
+}
+
+.contact .icon{
+    font-size: 4.5em;
+}
+
+.contact .info h3 {
+    color: #000;
+}
+
+.contact .info p {
+    font-size: 1.5em;
+}
+
+.footer {
+    background-color: #000016;
+    color: #fff;
+    padding: 2em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-title {
+    font-size: 1.3em;
+    font-weight: lighter;
+    color: deeppink;
 }
