--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ header {
     padding:20px 30px ;
 }
 .logo{    
-    color:black; 
+    color: gainsboro; 
     font-weight:bold;       
-    font-size:1.9em;
+    font-size:1.1em;
 }
 .navigation a{
     color:black;
@@ -101,13 +101,11 @@ section {
     font-weight: bolder;
     margin-bottom: 10px;
 }
-
 .content {
     display: flex;
     justify-content: center;
     flex-direction: row;
 }
-
 .card {
     background-color: #fff;
     width: 21.25em;
@@ -117,28 +115,23 @@ section {
     margin: 100px;
     transition: 0.7s ease;
 }
-
 .card:hover {
     transform: scale(1.1);
 }
-
 .card .icon {
     color: rebeccapurple;
     font-size: 6em;
     text-align: center;
 }
-
 .info {
     text-align: center;
 }
 .projects {
     background-color: #000016;
 }
-
 .projects .content{
     margin-top: 30px;
 }
-
 .project-card {
     background-color: #fff;
     border: 10px solid #fff;
@@ -149,28 +142,22 @@ section {
     margin: 15px;
     transition: 0.7s ease;
 }
-
 .project-card:hover {
    transform: scale(1.1);
 }
-
 .project-card:hover .project-image {
     opacity: 0.9;
  }
-
 .project-image img{
     width: 100%
 }
-
 .project-info {
     padding: 1em;
 }
-
 .project-category {
     font-size: 0.8em;
     color: #000;
 }
-
 .project-title {
     display: flex;
     justify-content: space-between;
@@ -178,28 +165,13 @@ section {
     font-weight: 800;
     margin-top: 10px;
 }
-
 .more-details {
     text-decoration: none;
     color: #3a6cf4;
 }
-
 .more-details:hover {
     color: powderblue;
 }
-
-.contact .icon{
-    font-size: 4.5em;
-}
-
-.contact .info h3 {
-    color: #000;
-}
-
-.contact .info p {
-    font-size: 1.5em;
-}
-
 .footer {
     background-color: #000016;
     color: #fff;
@@ -207,13 +179,11 @@ section {
     display: flex;
     justify-content: space-between;
 }
-
 .footer-title {
     font-size: 1.3em;
     font-weight: lighter;
-    color: deeppink;
+    color: darkorange;
 }
-
 .copy {
     font-size: 1.0em;
     padding: 0 12px 0 0;
